# old-rust-web-app

./: .gitignore  .travis.yml  README.md
api/: Cargo.toml
api-futures/: Cargo.toml
api-futures/benches/: mod.rs
api-futures/src/: errors.rs  lib.rs  main.rs
api-futures/src/host/: mod.rs  quick_router.rs  router.rs
api/src/: errors.rs  main.rs  model.rs  routes.rs
api/src/model/: mod.rs
api/src/model/product/: mod.rs
api/src/model/product/commands/: mod.rs
api/src/worker/: mod.rs  queue.rs  unit.rs
