[package]
name = "webapp_demo"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]

[dependencies]

# Our base server framework
iron = "*"

# Lets us route requests to different handlers based on the url
router = "*"

# A super fast serialisation framework
serde = "*"

# Serialise serde structures as json
serde_json = "*"

# Lets us automatically derive serialisation at compile time
serde_derive = "*"

# Makes it easy to write new Rust Error types
error-chain = "*"

# We used this macro for testing json responses easily
json_str = "*"